--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/post-no-bills-jaffna" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
@@ -46,26 +48,34 @@
     </header>
     <main>
         <div class="testimonials">
-            <div class="image1">
+            <figure class="fig">
                 <img src="/img/bench.png" alt="bench" class="bench">
-                <p class="text">Рядом исторические
-                    парки и скверы</p>
-            </div>
-            <div class="image2">
+                <figcaption>
+                    Рядом исторические
+                    парки и скверы
+                </figcaption> 
+            </figure>
+            <figure class="fig">
                 <img src="/img/building.png" alt="building" class="building">
-                <p class="text">Полностью
-                    обустроенный</p>
-            </div>
-            <div class="image3">
+                <figcaption>
+                    Полностью
+                    обустроенный
+                </figcaption> 
+            </figure>
+            <figure class="fig">
                 <img src="/img/fountain.png" alt="fountain" class="fountain">
-                <p class="text">10 фонтанов
-                    на территории</p>
-            </div> 
-            <div class="image4"> 
+                <figcaption>
+                    10 фонтанов
+                    на территории
+                </figcaption> 
+            </figure>
+            <figure class="fig">
                 <img src="/img/bicycle.png" alt="bicycle" class="bicycle">
-                <p class="text">6 км 
-                    велодорожек</p>
-            </div>
+                <figcaption>
+                    6 км 
+                    велодорожек
+                </figcaption> 
+            </figure>
         </div>
         <div class="second_part">
             <h1 class="title2">Наши квартиры</h1>
