--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <section class="header">
+        <div class="container">
             <div class="header_wrapper">
                 <div class="logo">
                     <img src="/img/first-screen__logo.png" alt="logo">
@@ -43,8 +43,8 @@
                         <img src="/img/phone.png" alt="phone" class="phone1">
                         <p class="nummer">8 (812) 123-45-67</p>
                     </div>
-                </div>
-            </section> 
+                </div> 
+            </div>
     </header>
     <main>
         <div class="testimonials">
